syntax = "proto3";
// 前后台通信协议定义

option optimize_for = SPEED;
// option optimize_for = LITE_RUNTIME;
// option optimize_for = CODE_SIZE;
// --cpp_out=lite:,--cpp_out=
option cc_enable_arenas = true;
option cc_generic_services = true;

option go_package = "github.com/atframework/atsf4g-go/service-lobbysvr/protocol/public/protocol/pbdesc";

import "google/protobuf/timestamp.proto";

import "protocol/common/com.struct.item.common.proto";

import "protocol/pbdesc/com.const.proto";
import "protocol/pbdesc/com.struct.proto";

import "protocol/pbdesc/com.struct.quest.proto";
import "protocol/pbdesc/com.struct.condition.proto";
import "protocol/pbdesc/com.struct.module.unlock.proto";
import "protocol/pbdesc/com.struct.mall.proto";

// import "protocol/pbdesc/lobbysvr.com.protocol.character.proto";

package proy;

/////////////////////////////////////////////////////
// 到loginsvr的CS协议
/////////////////////////////////////////////////////

message CSLoginUpdateReq {
  DAccountData account = 1;      // 平台信息
  EnSystemID system_id = 2;      // 系统id，ios or android
  string package_version = 11;   // 包版本
  string resource_version = 12;  // 资源版本
  string protocol_version = 13;  // 协议版本
}

message SCLoginUpdateRsp {
  DClientUpdateCfg update_info = 1;  // 更新信息
  int32 version_type = 2;            // 版本类型 @EnVersionType
}

message CSLoginAuthReq {
  string open_id = 1;
  DAccountData account = 2;      // 平台信息
  EnSystemID system_id = 3;      // 系统id，ios or android
  string package_version = 11;   // 包版本
  string resource_version = 12;  // 资源版本
  string protocol_version = 13;  // 协议版本

  DClientDeviceInfo client_info = 21;
}

message SCLoginAuthRsp {
  string login_code = 1;
  // repeated 表示有多个备选 。域名|IP + 端口, 类似下面的形式：10.164.1.54:8002
  // or dd.qq.com:8080
  repeated string login_address = 2;
  DClientUpdateCfg update_info = 3;  // 更新信息
  uint32 version_type = 4;           // 版本类型 @EnVersionType

  string open_id = 21;    // 最终open_id
  uint64 user_id = 22;    // 玩家数字ID
  bool is_new_user = 23;  // 是否是新玩家
  uint32 zone_id = 24;    // 大区ID

  int64 ban_time = 101;    // 封号期限
  int64 start_time = 102;  // 开服时间
}

// 修改密码
message CSAccessUpdateReq {
  string open_id = 1;
  uint64 user_id = 2;     // 玩家数字ID
  string old_access = 3;  // 老密码
  string new_access = 4;
}

message SCAccessUpdateRsp {}

////////////////////////////////////////////////////////
// 到gamesvr的CS协议
////////////////////////////////////////////////////////

// 登录请求
message CSLoginReq {
  string login_code = 1;  // loginsvr下发的登录码
  string open_id = 2;
  uint64 user_id = 3;        // 玩家数字ID
  uint32 zone_id = 4;        // 玩家ZoneID
  DAccountData account = 5;  // 平台信息
  DClientDeviceInfo client_info = 11;
}

// 登录返回
message SCLoginRsp {
  uint64 last_sequence = 1;      // 上次收包的seq(不算MCSLogin)
  int64 heartbeat_interval = 2;  // 心跳包间隔
  bool is_new_user = 3;          // 是否是新玩家
  uint32 version_type = 4;       // 版本类型 @EnVersionType
  uint32 zone_id = 5;            // 大区ID

  // 时区计算的基准时间
  google.protobuf.Timestamp timezone_base_timestamp = 11;
}

// 脏数据同步包
message SCUserDirtyChgSync {
  message RemoveItemKey {
    int32 type_id = 1;
    int64 guid = 2;
  }

  message RemoveItemData {
    repeated RemoveItemKey item_keys = 1;
  }

  message AutoRewardItemData {
    repeated DItemAutoReward rewards = 1;
  }

  message DirtyItemData {
    repeated DItemInstance item = 1;
  }

  DirtyItemData dirty_items = 1;

  RemoveItemData remove_item_keys = 2;

  AutoRewardItemData auto_rewards = 3;

  DUserProfile user_profile = 6;
  DUserInfo user_info = 7;
  DUserOptions user_options = 8;
  DUserQuestEventList dirty_quest_events = 15;
  DUserModuleUnlockDirtyChg dirty_module_unlock = 17;
  DUserMallDirtyChg dirty_mall = 20;

  DConditionCounterDirtyChg dirty_condition_counter = 201;
}

// 心跳包，上行包
message CSPingReq {
  int64 timepoint = 1;
}

// 心跳包，下行包
message SCPongRsp {
  int64 timepoint = 1;
}

// 请求用户数据
message CSUserGetInfoReq {
  bool need_user_info = 1;            // 标记为true 回包才有会有玩家基本数据
  bool need_user_options = 2;         // 标记为true 回包才有会有玩家选项数据
  bool need_user_inventory = 3;       // 标记为true 回包才有会有玩家仓库数据
  bool need_user_quest = 11;          // 标记为true 回包才有会有任务
  bool need_user_module_unlock = 12;  // 标记为true 回包才有会有模块解锁数据
  bool need_user_mall = 14;           // 标记为true 回包才有会有商城数据

  bool need_user_condition_counter = 201;  // 标记为true 回包才有会有条件计数器数据
}

// 用户数据返回
message SCUserGetInfoRsp {
  DUserProfile user_profile = 1;
  DUserInfo user_info = 2;                            // 玩家数据
  DUserOptions user_options = 3;                      // 玩家自定义选项
  DUserQuestsData user_quest = 11;                    // 玩家任务信息
  DUserModuleUnlockData user_module_unlock = 12;      // 玩家模块解锁数据
  DUserMallData user_mall = 15;                       // 玩家商城数据

  // 道具化通用下发
  message NormalizeItemData {
    repeated DItemInstance item = 1;
  }
  NormalizeItemData normalize_item = 101;

  DConditionCounterData user_condition_counter = 201;  // 玩家条件计数器数据
}

// GM指令请求
message CSUserGMCommandReq {
  repeated string args = 1;
}

// GM指令返回
message SCUserGMCommandRsp {
  repeated string reply = 1;
}

// 用户更新设置请求
message CSUserUpdateClientOptionReq {
  DUserOptions options = 1;
}

// 用户更新设置请求
message SCUserUpdateClientOptionRsp {}

// 用户使用道具
message CSUserUseItemReq {
  DItemBasic item = 1;
  DItemUseParam use_param = 2;
}

message SCUserUseItemRsp {
  repeated DItemInstance gain_item = 1;
}
